# tuxsa-introtorobot

./: README.md
2happy_topic/: README.md
2happy_topic/happy_topic/: happy_publisher_node.py  happy_subscriber_node.py
3simple_service/: README.md  package.xml  setup.py
3simple_service/simple_service/: service_client_node.py  service_server_node.py
4bringme_service/: README.md
4bringme_service/bringme_service/: bringme_client_node.py  bringme_service_node.py
5turtlesim_pen_demo/: package.xml  setup.cfg  setup.py
5turtlesim_pen_demo/launch/: paint_demo.launch.py
5turtlesim_pen_demo/turtlesim_pen_demo/: move_and_paint.py
6bringme_action/: README.md
6bringme_action/bringme_action/: bringme_action_client_node.py  bringme_action_server_node.py
7goal_sender/: package.xml  setup.py
7goal_sender/launch/: send_goal.launch.py
7goal_sender/nav2_goal_sender/: nav2_goal_client.py
7goal_sender/resource/: nav2_goal_sender
