<?xml version="1.0"?>
<package format="3">
  <name>nav2_goal_sender</name>
  <version>0.0.1</version>
  <description>Send NavigateToPose goals to Nav2.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
